--- a/main.tex
+++ b/main.tex
@@ -32,6 +32,7 @@
 \usepackage{multirow}
 \usepackage{makecell}
 \usepackage{footnote}
+\usepackage{booktabs}
 \makesavenoteenv{tabular}
 
 % Algorithm
